syntax copy.output
State 203 conflicts: 6 shift/reduce
State 204 conflicts: 6 shift/reduce
State 206 conflicts: 6 shift/reduce
State 279 conflicts: 1 shift/reduce
State 286 conflicts: 6 shift/reduce
State 287 conflicts: 6 shift/reduce
State 288 conflicts: 6 shift/reduce
State 289 conflicts: 6 shift/reduce
State 290 conflicts: 6 shift/reduce
State 291 conflicts: 6 shift/reduce
State 326 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "eof"

    1 program: global_declarations main_function

    2 global_declarations: global_declarations global_declaration
    3                    | ε

    4 global_declaration: typedef_declaration
    5                   | class_declaration
    6                   | enum_declaration
    7                   | global_var_declaration
    8                   | func_declaration

    9 typedef_declaration: "typedef" typename "id" dims ";"
   10                    | error typename "id" dims ";"
   11                    | "typedef" typename error dims ";"
   12                    | "typedef" typename "id" dims error

   13 typename: standard_type
   14         | "id"

   15 standard_type: "char"
   16              | "int"
   17              | "float"
   18              | "void"

   19 dims: dims dim
   20     | ε

   21 dim: "[" "int const" "]"
   22    | error "int const" "]"
   23    | "[" "int const" error
   24    | "[" "]"
   25    | error "]"
   26    | "[" error

   27 class_declaration: "class" "id" class_body ";"
   28                  | error "id" class_body ";"
   29                  | "class" error class_body ";"
   30                  | "class" "id" class_body error

   31 class_body: parent "{" members_methods "}"
   32           | parent error members_methods "}"
   33           | parent "{" members_methods error

   34 parent: ":" "id"
   35       | ε

   36 members_methods: members_methods access member_or_method
   37                | access member_or_method

   38 access: "private" ":"
   39       | "protected" ":"
   40       | "public" ":"
   41       | ε

   42 member_or_method: member
   43                 | method

   44 member: var_declaration

   45 var_declaration: typename variabledefs ";"

   46 variabledefs: variabledefs "," variabledef
   47             | variabledef

   48 variabledef: "id" dims

   49 method: short_func_declaration

   50 short_func_declaration: short_par_func_header ";"
   51                       | short_par_func_header error
   52                       | nopar_func_header ";"
   53                       | nopar_func_header error

   54 short_par_func_header: func_header_start "(" parameter_type_list ")"

   55 func_header_start: typename "id"

   56 parameter_type_list: parameter_type_list "," typename pass_dims
   57                    | typename pass_dims

   58 pass_dims: dims
   59          | "&"

   60 nopar_func_header: func_header_start "(" ")"

   61 enum_declaration: "enum" "id" enum_body ";"

   62 enum_body: "{" id_list "}"

   63 id_list: id_list "," "id" initializer
   64        | "id" initializer

   65 global_var_declaration: typename init_variabledefs ";"

   66 init_variabledefs: init_variabledefs "," init_variabledef
   67                  | init_variabledef

   68 init_variabledef: variabledef initializer

   69 initializer: "=" init_value
   70            | ε

   71 init_value: sign constant
   72           | sign "id"
   73           | "{" init_values "}"
   74           | error init_values "}"
   75           | "{" init_values error
   76           | "string"

   77 sign: "+ -"
   78     | ε

   79 constant: "char const"
   80         | "int const"
   81         | "double const"

   82 init_values: init_values "," init_value
   83            | init_value

   84 func_declaration: short_func_declaration
   85                 | full_func_declaration

   86 $@1: ε

   87 full_func_declaration: full_par_func_header "{" $@1 decl_statements "}"

   88 $@2: ε

   89 full_func_declaration: nopar_class_func_header "{" $@2 decl_statements "}"

   90 $@3: ε

   91 full_func_declaration: nopar_func_header "{" $@3 decl_statements "}"

   92 full_par_func_header: class_func_header_start "(" parameter_list ")"
   93                     | func_header_start "(" parameter_list ")"

   94 class_func_header_start: typename func_class "id"

   95 func_class: "id" "::"

   96 parameter_list: parameter_list "," typename pass_variabledef
   97               | typename pass_variabledef

   98 pass_variabledef: variabledef
   99                 | "&" "id"

  100 nopar_class_func_header: class_func_header_start "(" ")"

  101 decl_statements: declarations statements
  102                | declarations
  103                | statements
  104                | ε

  105 declarations: declarations decltype typename variabledefs ";"
  106             | decltype typename variabledefs ";"

  107 decltype: "static"
  108         | ε

  109 statements: statements statement
  110           | statement

  111 statement: expression_statement
  112          | if_statement
  113          | while_statement
  114          | for_statement
  115          | switch_statement
  116          | return_statement
  117          | io_statement
  118          | comp_statement
  119          | "continue" ";"
  120          | "continue" error
  121          | "break" ";"
  122          | "break" error
  123          | ";"

  124 expression_statement: general_expression ";"
  125                     | general_expression error

  126 general_expression: general_expression "," general_expression
  127                   | assignment

  128 assignment: variable "=" assignment
  129           | variable "=" "string"
  130           | expression

  131 variable: variable "[" general_expression "]"
  132         | variable "." "id"
  133         | decltype "id"
  134         | "this"

  135 expression: expression "||" expression
  136           | expression "&&" expression
  137           | expression "== !=" expression
  138           | expression "< >= < <=" expression
  139           | expression "+ -" expression
  140           | expression "* / %" expression
  141           | "!" expression
  142           | "+ -" expression
  143           | "SIZEOF" expression
  144           | "++ --" variable
  145           | variable "++ --"
  146           | variable
  147           | variable "(" expression_list ")"
  148           | "length" "(" general_expression ")"
  149           | constant
  150           | "(" general_expression ")"
  151           | "(" standard_type ")"

  152 expression_list: general_expression
  153                | ε

  154 $@4: ε

  155 if_statement: "if" "(" general_expression ")" $@4 statement if_tail

  156 if_tail: "else" statement
  157        | ε

  158 $@5: ε

  159 while_statement: "while" "(" general_expression ")" $@5 statement

  160 for_statement: "for" "(" optexpr ";" optexpr ";" optexpr ")" statement

  161 optexpr: general_expression
  162        | ε

  163 switch_statement: "switch" "(" general_expression ")" switch_tail

  164 $@6: ε

  165 switch_tail: "{" $@6 decl_cases "}"
  166            | single_casestatement

  167 decl_cases: declarations casestatements
  168           | declarations
  169           | casestatements
  170           | ε

  171 casestatements: casestatements casestatement
  172               | casestatement

  173 casestatement: "case" constant ":" casestatement
  174              | "case" constant ":" statements
  175              | "default" ":" statements

  176 single_casestatement: "case" constant ":" single_casestatement
  177                     | "case" constant ":" statement

  178 return_statement: "return" optexpr ";"

  179 io_statement: "cin" ">>" in_list ";"
  180             | "cout" "<<" out_list ";"

  181 in_list: in_list ">>" in_item
  182        | in_item

  183 in_item: variable

  184 out_list: out_list "<<" out_item
  185         | out_item

  186 out_item: general_expression
  187         | "string"

  188 $@7: ε

  189 comp_statement: "{" $@7 decl_statements "}"

  190 $@8: ε

  191 main_function: main_header "{" $@8 decl_statements "}"

  192 main_header: "int" "main" "(" ")"


Terminals, with rules where they appear

    "eof" (0) 0
    error (256) 10 11 12 22 23 25 26 28 29 30 32 33 51 53 74 75 120 122 125
    "typedef" (258) 9 11 12
    "char" (259) 15
    "int" (260) 16 192
    "float" (261) 17
    "enum" (262) 61
    "class" (263) 27 29 30
    "private" (264) 38
    "protected" (265) 39
    "public" (266) 40
    "void" (267) 18
    "static" (268) 107
    "continue" (269) 119 120
    "break" (270) 121 122
    "this" (271) 134
    "if" (272) 155
    "else" (273) 156
    "while" (274) 159
    "for" (275) 160
    "switch" (276) 163
    "case" (277) 173 174 176 177
    "default" (278) 175
    "return" (279) 178
    "cin" (280) 179
    "cout" (281) 180
    "length" (282) 148
    "main" (283) 192
    "id" <strval> (284) 9 10 12 14 27 28 30 34 48 55 61 63 64 72 94 95 99 132 133
    "int const" <intval> (285) 21 22 23 80
    "double const" <doubleval> (286) 81
    "char const" <charval> (287) 79
    "||" (288) 135
    "&&" (289) 136
    "== !=" (290) 137
    "< >= < <=" (291) 138
    "+ -" (292) 77 139 142
    "* / %" (293) 140
    "!" (294) 141
    "++ --" (295) 144 145
    "SIZEOF" (296) 143
    "string" (297) 76 129 187
    "(" (298) 54 60 92 93 100 147 148 150 151 155 159 160 163 192
    ")" (299) 54 60 92 93 100 147 148 150 151 155 159 160 163 192
    ";" (300) 9 10 11 27 28 29 45 50 52 61 65 105 106 119 121 123 124 160 178 179 180
    "." (301) 132
    "," (302) 46 56 63 66 82 96 126
    "=" (303) 69 128 129
    ":" (304) 34 38 39 40 173 174 175 176 177
    "[" (305) 21 23 24 26 131
    "]" (306) 21 22 24 25 131
    "&" (307) 59 99
    "{" (308) 31 33 62 73 75 87 89 91 165 189 191
    "}" (309) 31 32 62 73 74 87 89 91 165 189 191
    "::" (310) 95
    ">>" (311) 179 181
    "<<" (312) 180 184


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    program (59)
        on left: 1
        on right: 0
    global_declarations (60)
        on left: 2 3
        on right: 1 2
    global_declaration (61)
        on left: 4 5 6 7 8
        on right: 2
    typedef_declaration (62)
        on left: 9 10 11 12
        on right: 4
    typename (63)
        on left: 13 14
        on right: 9 10 11 12 45 55 56 57 65 94 96 97 105 106
    standard_type (64)
        on left: 15 16 17 18
        on right: 13 151
    dims (65)
        on left: 19 20
        on right: 9 10 11 12 19 48 58
    dim (66)
        on left: 21 22 23 24 25 26
        on right: 19
    class_declaration (67)
        on left: 27 28 29 30
        on right: 5
    class_body (68)
        on left: 31 32 33
        on right: 27 28 29 30
    parent (69)
        on left: 34 35
        on right: 31 32 33
    members_methods (70)
        on left: 36 37
        on right: 31 32 33 36
    access (71)
        on left: 38 39 40 41
        on right: 36 37
    member_or_method (72)
        on left: 42 43
        on right: 36 37
    member (73)
        on left: 44
        on right: 42
    var_declaration (74)
        on left: 45
        on right: 44
    variabledefs (75)
        on left: 46 47
        on right: 45 46 105 106
    variabledef (76)
        on left: 48
        on right: 46 47 68 98
    method (77)
        on left: 49
        on right: 43
    short_func_declaration (78)
        on left: 50 51 52 53
        on right: 49 84
    short_par_func_header (79)
        on left: 54
        on right: 50 51
    func_header_start (80)
        on left: 55
        on right: 54 60 93
    parameter_type_list (81)
        on left: 56 57
        on right: 54 56
    pass_dims (82)
        on left: 58 59
        on right: 56 57
    nopar_func_header (83)
        on left: 60
        on right: 52 53 91
    enum_declaration (84)
        on left: 61
        on right: 6
    enum_body (85)
        on left: 62
        on right: 61
    id_list (86)
        on left: 63 64
        on right: 62 63
    global_var_declaration (87)
        on left: 65
        on right: 7
    init_variabledefs (88)
        on left: 66 67
        on right: 65 66
    init_variabledef (89)
        on left: 68
        on right: 66 67
    initializer (90)
        on left: 69 70
        on right: 63 64 68
    init_value (91)
        on left: 71 72 73 74 75 76
        on right: 69 82 83
    sign (92)
        on left: 77 78
        on right: 71 72
    constant (93)
        on left: 79 80 81
        on right: 71 149 173 174 176 177
    init_values (94)
        on left: 82 83
        on right: 73 74 75 82
    func_declaration (95)
        on left: 84 85
        on right: 8
    full_func_declaration (96)
        on left: 87 89 91
        on right: 85
    $@1 (97)
        on left: 86
        on right: 87
    $@2 (98)
        on left: 88
        on right: 89
    $@3 (99)
        on left: 90
        on right: 91
    full_par_func_header (100)
        on left: 92 93
        on right: 87
    class_func_header_start (101)
        on left: 94
        on right: 92 100
    func_class (102)
        on left: 95
        on right: 94
    parameter_list (103)
        on left: 96 97
        on right: 92 93 96
    pass_variabledef (104)
        on left: 98 99
        on right: 96 97
    nopar_class_func_header (105)
        on left: 100
        on right: 89
    decl_statements (106)
        on left: 101 102 103 104
        on right: 87 89 91 189 191
    declarations (107)
        on left: 105 106
        on right: 101 102 105 167 168
    decltype (108)
        on left: 107 108
        on right: 105 106 133
    statements (109)
        on left: 109 110
        on right: 101 103 109 174 175
    statement (110)
        on left: 111 112 113 114 115 116 117 118 119 120 121 122 123
        on right: 109 110 155 156 159 160 177
    expression_statement (111)
        on left: 124 125
        on right: 111
    general_expression (112)
        on left: 126 127
        on right: 124 125 126 131 148 150 152 155 159 161 163 186
    assignment (113)
        on left: 128 129 130
        on right: 127 128
    variable (114)
        on left: 131 132 133 134
        on right: 128 129 131 132 144 145 146 147 183
    expression (115)
        on left: 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151
        on right: 130 135 136 137 138 139 140 141 142 143
    expression_list (116)
        on left: 152 153
        on right: 147
    if_statement (117)
        on left: 155
        on right: 112
    $@4 (118)
        on left: 154
        on right: 155
    if_tail (119)
        on left: 156 157
        on right: 155
    while_statement (120)
        on left: 159
        on right: 113
    $@5 (121)
        on left: 158
        on right: 159
    for_statement (122)
        on left: 160
        on right: 114
    optexpr (123)
        on left: 161 162
        on right: 160 178
    switch_statement (124)
        on left: 163
        on right: 115
    switch_tail (125)
        on left: 165 166
        on right: 163
    $@6 (126)
        on left: 164
        on right: 165
    decl_cases (127)
        on left: 167 168 169 170
        on right: 165
    casestatements (128)
        on left: 171 172
        on right: 167 169 171
    casestatement (129)
        on left: 173 174 175
        on right: 171 172 173
    single_casestatement (130)
        on left: 176 177
        on right: 166 176
    return_statement (131)
        on left: 178
        on right: 116
    io_statement (132)
        on left: 179 180
        on right: 117
    in_list (133)
        on left: 181 182
        on right: 179 181
    in_item (134)
        on left: 183
        on right: 181 182
    out_list (135)
        on left: 184 185
        on right: 180 184
    out_item (136)
        on left: 186 187
        on right: 184 185
    comp_statement (137)
        on left: 189
        on right: 118
    $@7 (138)
        on left: 188
        on right: 189
    main_function (139)
        on left: 191
        on right: 1
    $@8 (140)
        on left: 190
        on right: 191
    main_header (141)
        on left: 192
        on right: 191


State 0

    0 $accept: • program "eof"

    $default  reduce using rule 3 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


State 1

    0 $accept: program • "eof"

    "eof"  shift, and go to state 3


State 2

    1 program: global_declarations • main_function
    2 global_declarations: global_declarations • global_declaration

    error      shift, and go to state 4
    "typedef"  shift, and go to state 5
    "char"     shift, and go to state 6
    "int"      shift, and go to state 7
    "float"    shift, and go to state 8
    "enum"     shift, and go to state 9
    "class"    shift, and go to state 10
    "void"     shift, and go to state 11
    "id"       shift, and go to state 12

    global_declaration       go to state 13
    typedef_declaration      go to state 14
    typename                 go to state 15
    standard_type            go to state 16
    class_declaration        go to state 17
    short_func_declaration   go to state 18
    short_par_func_header    go to state 19
    func_header_start        go to state 20
    nopar_func_header        go to state 21
    enum_declaration         go to state 22
    global_var_declaration   go to state 23
    func_declaration         go to state 24
    full_func_declaration    go to state 25
    full_par_func_header     go to state 26
    class_func_header_start  go to state 27
    nopar_class_func_header  go to state 28
    main_function            go to state 29
    main_header              go to state 30


State 3

    0 $accept: program "eof" •

    $default  accept


State 4

   10 typedef_declaration: error • typename "id" dims ";"
   28 class_declaration: error • "id" class_body ";"

    "char"   shift, and go to state 6
    "int"    shift, and go to state 31
    "float"  shift, and go to state 8
    "void"   shift, and go to state 11
    "id"     shift, and go to state 32

    typename       go to state 33
    standard_type  go to state 16


State 5

    9 typedef_declaration: "typedef" • typename "id" dims ";"
   11                    | "typedef" • typename error dims ";"
   12                    | "typedef" • typename "id" dims error

    "char"   shift, and go to state 6
    "int"    shift, and go to state 31
    "float"  shift, and go to state 8
    "void"   shift, and go to state 11
    "id"     shift, and go to state 12

    typename       go to state 34
    standard_type  go to state 16


State 6

   15 standard_type: "char" •

    $default  reduce using rule 15 (standard_type)


State 7

   16 standard_type: "int" •
  192 main_header: "int" • "main" "(" ")"

    "main"  shift, and go to state 35

    $default  reduce using rule 16 (standard_type)


State 8

   17 standard_type: "float" •

    $default  reduce using rule 17 (standard_type)


State 9

   61 enum_declaration: "enum" • "id" enum_body ";"

    "id"  shift, and go to state 36


State 10

   27 class_declaration: "class" • "id" class_body ";"
   29                  | "class" • error class_body ";"
   30                  | "class" • "id" class_body error

    error  shift, and go to state 37
    "id"   shift, and go to state 38


State 11

   18 standard_type: "void" •

    $default  reduce using rule 18 (standard_type)


State 12

   14 typename: "id" •

    $default  reduce using rule 14 (typename)


State 13

    2 global_declarations: global_declarations global_declaration •

    $default  reduce using rule 2 (global_declarations)


State 14

    4 global_declaration: typedef_declaration •

    $default  reduce using rule 4 (global_declaration)


State 15

   55 func_header_start: typename • "id"
   65 global_var_declaration: typename • init_variabledefs ";"
   94 class_func_header_start: typename • func_class "id"

    "id"  shift, and go to state 39

    variabledef        go to state 40
    init_variabledefs  go to state 41
    init_variabledef   go to state 42
    func_class         go to state 43


State 16

   13 typename: standard_type •

    $default  reduce using rule 13 (typename)


State 17

    5 global_declaration: class_declaration •

    $default  reduce using rule 5 (global_declaration)


State 18

   84 func_declaration: short_func_declaration •

    $default  reduce using rule 84 (func_declaration)


State 19

   50 short_func_declaration: short_par_func_header • ";"
   51                       | short_par_func_header • error

    error  shift, and go to state 44
    ";"    shift, and go to state 45


State 20

   54 short_par_func_header: func_header_start • "(" parameter_type_list ")"
   60 nopar_func_header: func_header_start • "(" ")"
   93 full_par_func_header: func_header_start • "(" parameter_list ")"

    "("  shift, and go to state 46


State 21

   52 short_func_declaration: nopar_func_header • ";"
   53                       | nopar_func_header • error
   91 full_func_declaration: nopar_func_header • "{" $@3 decl_statements "}"

    error  shift, and go to state 47
    ";"    shift, and go to state 48
    "{"    shift, and go to state 49


State 22

    6 global_declaration: enum_declaration •

    $default  reduce using rule 6 (global_declaration)


State 23

    7 global_declaration: global_var_declaration •

    $default  reduce using rule 7 (global_declaration)


State 24

    8 global_declaration: func_declaration •

    $default  reduce using rule 8 (global_declaration)


State 25

   85 func_declaration: full_func_declaration •

    $default  reduce using rule 85 (func_declaration)


State 26

   87 full_func_declaration: full_par_func_header • "{" $@1 decl_statements "}"

    "{"  shift, and go to state 50


State 27

   92 full_par_func_header: class_func_header_start • "(" parameter_list ")"
  100 nopar_class_func_header: class_func_header_start • "(" ")"

    "("  shift, and go to state 51


State 28

   89 full_func_declaration: nopar_class_func_header • "{" $@2 decl_statements "}"

    "{"  shift, and go to state 52


State 29

    1 program: global_declarations main_function •

    $default  reduce using rule 1 (program)


State 30

  191 main_function: main_header • "{" $@8 decl_statements "}"

    "{"  shift, and go to state 53


State 31

   16 standard_type: "int" •

    $default  reduce using rule 16 (standard_type)


State 32

   14 typename: "id" •
   28 class_declaration: error "id" • class_body ";"

    ":"  shift, and go to state 54

    "id"      reduce using rule 14 (typename)
    $default  reduce using rule 35 (parent)

    class_body  go to state 55
    parent      go to state 56


State 33

   10 typedef_declaration: error typename • "id" dims ";"

    "id"  shift, and go to state 57


State 34

    9 typedef_declaration: "typedef" typename • "id" dims ";"
   11                    | "typedef" typename • error dims ";"
   12                    | "typedef" typename • "id" dims error

    error  shift, and go to state 58
    "id"   shift, and go to state 59


State 35

  192 main_header: "int" "main" • "(" ")"

    "("  shift, and go to state 60


State 36

   61 enum_declaration: "enum" "id" • enum_body ";"

    "{"  shift, and go to state 61

    enum_body  go to state 62


State 37

   29 class_declaration: "class" error • class_body ";"

    ":"  shift, and go to state 54

    $default  reduce using rule 35 (parent)

    class_body  go to state 63
    parent      go to state 56


State 38

   27 class_declaration: "class" "id" • class_body ";"
   30                  | "class" "id" • class_body error

    ":"  shift, and go to state 54

    $default  reduce using rule 35 (parent)

    class_body  go to state 64
    parent      go to state 56


State 39

   48 variabledef: "id" • dims
   55 func_header_start: typename "id" •
   95 func_class: "id" • "::"

    "::"  shift, and go to state 65

    "("       reduce using rule 55 (func_header_start)
    $default  reduce using rule 20 (dims)

    dims  go to state 66


State 40

   68 init_variabledef: variabledef • initializer

    "="  shift, and go to state 67

    $default  reduce using rule 70 (initializer)

    initializer  go to state 68


State 41

   65 global_var_declaration: typename init_variabledefs • ";"
   66 init_variabledefs: init_variabledefs • "," init_variabledef

    ";"  shift, and go to state 69
    ","  shift, and go to state 70


State 42

   67 init_variabledefs: init_variabledef •

    $default  reduce using rule 67 (init_variabledefs)


State 43

   94 class_func_header_start: typename func_class • "id"

    "id"  shift, and go to state 71


State 44

   51 short_func_declaration: short_par_func_header error •

    $default  reduce using rule 51 (short_func_declaration)


State 45

   50 short_func_declaration: short_par_func_header ";" •

    $default  reduce using rule 50 (short_func_declaration)


State 46

   54 short_par_func_header: func_header_start "(" • parameter_type_list ")"
   60 nopar_func_header: func_header_start "(" • ")"
   93 full_par_func_header: func_header_start "(" • parameter_list ")"

    "char"   shift, and go to state 6
    "int"    shift, and go to state 31
    "float"  shift, and go to state 8
    "void"   shift, and go to state 11
    "id"     shift, and go to state 12
    ")"      shift, and go to state 72

    typename             go to state 73
    standard_type        go to state 16
    parameter_type_list  go to state 74
    parameter_list       go to state 75


State 47

   53 short_func_declaration: nopar_func_header error •

    $default  reduce using rule 53 (short_func_declaration)


State 48

   52 short_func_declaration: nopar_func_header ";" •

    $default  reduce using rule 52 (short_func_declaration)


State 49

   91 full_func_declaration: nopar_func_header "{" • $@3 decl_statements "}"

    $default  reduce using rule 90 ($@3)

    $@3  go to state 76


State 50

   87 full_func_declaration: full_par_func_header "{" • $@1 decl_statements "}"

    $default  reduce using rule 86 ($@1)

    $@1  go to state 77


State 51

   92 full_par_func_header: class_func_header_start "(" • parameter_list ")"
  100 nopar_class_func_header: class_func_header_start "(" • ")"

    "char"   shift, and go to state 6
    "int"    shift, and go to state 31
    "float"  shift, and go to state 8
    "void"   shift, and go to state 11
    "id"     shift, and go to state 12
    ")"      shift, and go to state 78

    typename        go to state 79
    standard_type   go to state 16
    parameter_list  go to state 80


State 52

   89 full_func_declaration: nopar_class_func_header "{" • $@2 decl_statements "}"

    $default  reduce using rule 88 ($@2)

    $@2  go to state 81


State 53

  191 main_function: main_header "{" • $@8 decl_statements "}"

    $default  reduce using rule 190 ($@8)

    $@8  go to state 82


State 54

   34 parent: ":" • "id"

    "id"  shift, and go to state 83


State 55

   28 class_declaration: error "id" class_body • ";"

    ";"  shift, and go to state 84


State 56

   31 class_body: parent • "{" members_methods "}"
   32           | parent • error members_methods "}"
   33           | parent • "{" members_methods error

    error  shift, and go to state 85
    "{"    shift, and go to state 86


State 57

   10 typedef_declaration: error typename "id" • dims ";"

    $default  reduce using rule 20 (dims)

    dims  go to state 87


State 58

   11 typedef_declaration: "typedef" typename error • dims ";"

    $default  reduce using rule 20 (dims)

    dims  go to state 88


State 59

    9 typedef_declaration: "typedef" typename "id" • dims ";"
   12                    | "typedef" typename "id" • dims error

    $default  reduce using rule 20 (dims)

    dims  go to state 89


State 60

  192 main_header: "int" "main" "(" • ")"

    ")"  shift, and go to state 90


State 61

   62 enum_body: "{" • id_list "}"

    "id"  shift, and go to state 91

    id_list  go to state 92


State 62

   61 enum_declaration: "enum" "id" enum_body • ";"

    ";"  shift, and go to state 93


State 63

   29 class_declaration: "class" error class_body • ";"

    ";"  shift, and go to state 94


State 64

   27 class_declaration: "class" "id" class_body • ";"
   30                  | "class" "id" class_body • error

    error  shift, and go to state 95
    ";"    shift, and go to state 96


State 65

   95 func_class: "id" "::" •

    $default  reduce using rule 95 (func_class)


State 66

   19 dims: dims • dim
   48 variabledef: "id" dims •

    error  shift, and go to state 97
    "["    shift, and go to state 98

    ")"  reduce using rule 48 (variabledef)
    ";"  reduce using rule 48 (variabledef)
    ","  reduce using rule 48 (variabledef)
    "="  reduce using rule 48 (variabledef)

    dim  go to state 99


State 67

   69 initializer: "=" • init_value

    error     shift, and go to state 100
    "+ -"     shift, and go to state 101
    "string"  shift, and go to state 102
    "{"       shift, and go to state 103

    "id"            reduce using rule 78 (sign)
    "int const"     reduce using rule 78 (sign)
    "double const"  reduce using rule 78 (sign)
    "char const"    reduce using rule 78 (sign)

    init_value  go to state 104
    sign        go to state 105


State 68

   68 init_variabledef: variabledef initializer •

    $default  reduce using rule 68 (init_variabledef)


State 69

   65 global_var_declaration: typename init_variabledefs ";" •

    $default  reduce using rule 65 (global_var_declaration)


State 70

   66 init_variabledefs: init_variabledefs "," • init_variabledef

    "id"  shift, and go to state 106

    variabledef       go to state 40
    init_variabledef  go to state 107


State 71

   94 class_func_header_start: typename func_class "id" •

    $default  reduce using rule 94 (class_func_header_start)


State 72

   60 nopar_func_header: func_header_start "(" ")" •

    $default  reduce using rule 60 (nopar_func_header)


State 73

   57 parameter_type_list: typename • pass_dims
   97 parameter_list: typename • pass_variabledef

    "id"  shift, and go to state 106
    "&"   shift, and go to state 108

    $default  reduce using rule 20 (dims)

    dims              go to state 109
    variabledef       go to state 110
    pass_dims         go to state 111
    pass_variabledef  go to state 112


State 74

   54 short_par_func_header: func_header_start "(" parameter_type_list • ")"
   56 parameter_type_list: parameter_type_list • "," typename pass_dims

    ")"  shift, and go to state 113
    ","  shift, and go to state 114


State 75

   93 full_par_func_header: func_header_start "(" parameter_list • ")"
   96 parameter_list: parameter_list • "," typename pass_variabledef

    ")"  shift, and go to state 115
    ","  shift, and go to state 116


State 76

   91 full_func_declaration: nopar_func_header "{" $@3 • decl_statements "}"

    "static"        shift, and go to state 117
    "continue"      shift, and go to state 118
    "break"         shift, and go to state 119
    "this"          shift, and go to state 120
    "if"            shift, and go to state 121
    "while"         shift, and go to state 122
    "for"           shift, and go to state 123
    "switch"        shift, and go to state 124
    "return"        shift, and go to state 125
    "cin"           shift, and go to state 126
    "cout"          shift, and go to state 127
    "length"        shift, and go to state 128
    "int const"     shift, and go to state 129
    "double const"  shift, and go to state 130
    "char const"    shift, and go to state 131
    "+ -"           shift, and go to state 132
    "!"             shift, and go to state 133
    "++ --"         shift, and go to state 134
    "SIZEOF"        shift, and go to state 135
    "("             shift, and go to state 136
    ";"             shift, and go to state 137
    "{"             shift, and go to state 138

    "}"       reduce using rule 104 (decl_statements)
    $default  reduce using rule 108 (decltype)

    constant              go to state 139
    decl_statements       go to state 140
    declarations          go to state 141
    decltype              go to state 142
    statements            go to state 143
    statement             go to state 144
    expression_statement  go to state 145
    general_expression    go to state 146
    assignment            go to state 147
    variable              go to state 148
    expression            go to state 149
    if_statement          go to state 150
    while_statement       go to state 151
    for_statement         go to state 152
    switch_statement      go to state 153
    return_statement      go to state 154
    io_statement          go to state 155
    comp_statement        go to state 156


State 77

   87 full_func_declaration: full_par_func_header "{" $@1 • decl_statements "}"

    "static"        shift, and go to state 117
    "continue"      shift, and go to state 118
    "break"         shift, and go to state 119
    "this"          shift, and go to state 120
    "if"            shift, and go to state 121
    "while"         shift, and go to state 122
    "for"           shift, and go to state 123
    "switch"        shift, and go to state 124
    "return"        shift, and go to state 125
    "cin"           shift, and go to state 126
    "cout"          shift, and go to state 127
    "length"        shift, and go to state 128
    "int const"     shift, and go to state 129
    "double const"  shift, and go to state 130
    "char const"    shift, and go to state 131
    "+ -"           shift, and go to state 132
    "!"             shift, and go to state 133
    "++ --"         shift, and go to state 134
    "SIZEOF"        shift, and go to state 135
    "("             shift, and go to state 136
    ";"             shift, and go to state 137
    "{"             shift, and go to state 138

    "}"       reduce using rule 104 (decl_statements)
    $default  reduce using rule 108 (decltype)

    constant              go to state 139
    decl_statements       go to state 157
    declarations          go to state 141
    decltype              go to state 142
    statements            go to state 143
    statement             go to state 144
    expression_statement  go to state 145
    general_expression    go to state 146
    assignment            go to state 147
    variable              go to state 148
    expression            go to state 149
    if_statement          go to state 150
    while_statement       go to state 151
    for_statement         go to state 152
    switch_statement      go to state 153
    return_statement      go to state 154
    io_statement          go to state 155
    comp_statement        go to state 156


State 78

  100 nopar_class_func_header: class_func_header_start "(" ")" •

    $default  reduce using rule 100 (nopar_class_func_header)


State 79

   97 parameter_list: typename • pass_variabledef

    "id"  shift, and go to state 106
    "&"   shift, and go to state 158

    variabledef       go to state 110
    pass_variabledef  go to state 112


State 80

   92 full_par_func_header: class_func_header_start "(" parameter_list • ")"
   96 parameter_list: parameter_list • "," typename pass_variabledef

    ")"  shift, and go to state 159
    ","  shift, and go to state 116


State 81

   89 full_func_declaration: nopar_class_func_header "{" $@2 • decl_statements "}"

    "static"        shift, and go to state 117
    "continue"      shift, and go to state 118
    "break"         shift, and go to state 119
    "this"          shift, and go to state 120
    "if"            shift, and go to state 121
    "while"         shift, and go to state 122
    "for"           shift, and go to state 123
    "switch"        shift, and go to state 124
    "return"        shift, and go to state 125
    "cin"           shift, and go to state 126
    "cout"          shift, and go to state 127
    "length"        shift, and go to state 128
    "int const"     shift, and go to state 129
    "double const"  shift, and go to state 130
    "char const"    shift, and go to state 131
    "+ -"           shift, and go to state 132
    "!"             shift, and go to state 133
    "++ --"         shift, and go to state 134
    "SIZEOF"        shift, and go to state 135
    "("             shift, and go to state 136
    ";"             shift, and go to state 137
    "{"             shift, and go to state 138

    "}"       reduce using rule 104 (decl_statements)
    $default  reduce using rule 108 (decltype)

    constant              go to state 139
    decl_statements       go to state 160
    declarations          go to state 141
    decltype              go to state 142
    statements            go to state 143
    statement             go to state 144
    expression_statement  go to state 145
    general_expression    go to state 146
    assignment            go to state 147
    variable              go to state 148
    expression            go to state 149
    if_statement          go to state 150
    while_statement       go to state 151
    for_statement         go to state 152
    switch_statement      go to state 153
    return_statement      go to state 154
    io_statement          go to state 155
    comp_statement        go to state 156


State 82

  191 main_function: main_header "{" $@8 • decl_statements "}"

    "static"        shift, and go to state 117
    "continue"      shift, and go to state 118
    "break"         shift, and go to state 119
    "this"          shift, and go to state 120
    "if"            shift, and go to state 121
    "while"         shift, and go to state 122
    "for"           shift, and go to state 123
    "switch"        shift, and go to state 124
    "return"        shift, and go to state 125
    "cin"           shift, and go to state 126
    "cout"          shift, and go to state 127
    "length"        shift, and go to state 128
    "int const"     shift, and go to state 129
    "double const"  shift, and go to state 130
    "char const"    shift, and go to state 131
    "+ -"           shift, and go to state 132
    "!"             shift, and go to state 133
    "++ --"         shift, and go to state 134
    "SIZEOF"        shift, and go to state 135
    "("             shift, and go to state 136
    ";"             shift, and go to state 137
    "{"             shift, and go to state 138

    "}"       reduce using rule 104 (decl_statements)
    $default  reduce using rule 108 (decltype)
